<resources>
    <string name="app_name">AppsflyerTest</string>
    <string name="in_app_event">In-app Event</string>
    <string name="purchase_event">Purchase Event</string>
    <string name="lockscreen_event">Lockscreen Event</string>
    <string name="ad_revenue">Ad Revenue</string>
    <string name="else_function">Else</string>
    <string name="deep_link">DeepLink</string>
    <string name="one_link_test">One Link Test</string>
</resources>