<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/color_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_purchase"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_primary"
            android:text="@string/purchase_event"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@id/btn_lockscreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btn_lockscreen"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_primary"
            android:text="@string/lockscreen_event"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@id/btn_ad_revenue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_purchase"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btn_ad_revenue"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_primary"
            android:text="@string/ad_revenue"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@id/btn_else"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_lockscreen" />

        <Button
            android:id="@+id/btn_else"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_primary"
            android:text="@string/else_function"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@id/btn_deep_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_ad_revenue" />

        <Button
            android:id="@+id/btn_deep_link"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_primary"
            android:text="@string/deep_link"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@id/btn_one_link_test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_else" />

        <Button
            android:id="@+id/btn_one_link_test"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_primary"
            android:text="@string/one_link_test"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_deep_link" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>